        * config-edit: added -apply-fixes option
        * Value: can specify wider replace instruction by using regexp as key of the 'replace' parameter

2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.228

        * Specifically require DB_File as this module is not available by default on Ubuntu
        * Skip Debian dependency tests when AptPkg::Config is not available (non Debian systems)

2011-01-07 Dominique Dumont  <domi.dumont@free.fr> 1.227

        * Model.pm: deprecated name_match parameter in accept
          specification. The regexp should now be specified as a
          key of a hash. 
        * Value.pm: warn_if_match and warn_unless_match can speficy instructions to "fix"
          the value.
        * WizardHelper: can be set to stop on items with warnings. Added bail_out method to bail
          out cleanly from wizard helper.
        * model Debian::Dpkg::Control::Binary: Depends element specifies 
          Perl cargo class Config::Model::Debian::Dependency (see below)
        * Likewise for Debian::Dpkg::Control::Source Build-Depends*
        * Debian::Dependency: new class derived from Value to provide checks specific
          to Debian dependencies (syntax, whether a "(>= vers)" is necessary or not, ... )
        * New dependency: LWP::Simple


2010-12-08 Dominique Dumont  <domi.dumont@free.fr> 1.226

        * config-edit: mount fuse file system in the background. (like sshfs)
        * FuseUI: Improved doc
        * C::M::Backend::Fstab: improved doc

2010-12-06 Dominique Dumont  <domi.dumont@free.fr> 1.225

        * Build.PL: build depends on Test::Command 0.08 to avoid smoke test problems

2010-12-06 Dominique Dumont  <domi.dumont@free.fr> 1.224

        * Node AnyId Value: get() now accepts check parameter, autoadd parameter 
        * Node AnyId: added children method
        * Added Fuse interface: configuration tree is mapped to a virtual directory. 
          Use config-edit -ui fuse -fuse_dir some/where to use. 